# binio

./: README.md  meson.build
include/binio/: endianness.hpp  read.hpp  write.hpp
tests/: meson.build  test_read_write.cpp
